added in js file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- link to the stylesheet -->
     <link href="main.css" rel="stylesheet" />
+    <!-- source in javascript file hello.js -->
+    <script src="hello.js"></script>
     <title>Tier 1 Summary</title>
 </head>
 <body>
